creation and update of company and videogames finished

--- a/microservicio/infraestructura/build.gradle
+++ b/microservicio/infraestructura/build.gradle
@@ -35,8 +35,10 @@ dependencies {
 
 	implementation project.ext.apachecommons
 	implementation project.ext.springbootjdbc
-	runtimeOnly project.ext.db
+	implementation project.ext.db
 	testImplementation project.ext.flywaytest
+	implementation project.ext.h2
+	implementation project.ext.springbootjdbc
 
 	
 	implementation project(':dominio')
