--- a/microservicio/aplicacion/build.gradle
+++ b/microservicio/aplicacion/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 	implementation project(':dominio')
 	implementation project(':comun:comun-aplicacion')
 	implementation project.ext.springtxt
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0'
 
 	compileOnly project.ext.lombok
 	annotationProcessor project.ext.lombok
