--- a/microservicio/build.gradle
+++ b/microservicio/build.gradle
@@ -64,7 +64,7 @@ allprojects {
 			"io.springfox:springfox-swagger2:2.9.2"
 	]
 
-	project.ext.db = [""]
+	project.ext.db = ["org.postgresql:postgresql:42.3.3"]
 
 	project.ext.springbootjdbc = ["org.springframework.boot:spring-boot-starter-jdbc:${springBootVersion}"]
 	project.ext.flyway = ["org.flywaydb:flyway-core:5.2.1"]
