--- a/microservicio/src/main/resources/application.yaml
+++ b/microservicio/src/main/resources/application.yaml
@@ -11,6 +11,12 @@ server:
          timeout: 21600s
 
 spring:
+   h2:
+      console:
+         enabled: true
+         path: /h2
+         settings:
+            trace: true
    datasource:
       driver-class-name: org.h2.Driver
       type: com.zaxxer.hikari.HikariDataSource
