--- a/microservicio/sonar-project.properties
+++ b/microservicio/sonar-project.properties
@@ -1,6 +1,6 @@
 # Información del proyecto
-sonar.projectKey=co.com.ceiba.adn:reserva.hospedajes-mauricio.moreno
-sonar.projectName=CeibaADN-ReservaHospedajes(mauricio.moreno)
+sonar.projectKey=co.com.ceiba.adn:videojuego-santiago.alvarez
+sonar.projectName=Ceiba-ADN-Videojuegos(santiago.alvarez)
 
 #Datos de los fuentes y binarios
 sonar.sources=microservicio/aplicacion/src/main/java, microservicio/dominio/src/main/java, microservicio/infraestructura/src/main/java
