Domain test finish

--- a/microservicio/dominio/build.gradle
+++ b/microservicio/dominio/build.gradle
@@ -46,8 +46,8 @@ pitest {
 
 jacocoTestReport {
 	reports {
-		xml.enabled true
-		html.enabled true
+		xml.required = true
+		html.required = true
 	}
 	additionalSourceDirs files("../aplicacion/src/main/java")
 	additionalClassDirs files("../aplicacion/build/classes/java/main")
