--- a/microservicio/build.gradle
+++ b/microservicio/build.gradle
@@ -99,6 +99,6 @@ dependencies {
 
 bootJar {
 	mainClassName = 'com.ceiba.Application'
-    baseName = 'game-store'
-    version =  version
+    archiveBaseName = 'game-store'
+    archiveVersion =  version
 }
